objects/hed__Affiliation__c.object
<CustomObject>
    <description>Connection between a Contact and an Account.</description>
    <label>Affiliation</label>
    <nameField>
        <displayFormat>AF-{000000}</displayFormat>
        <label>Affiliation Key</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Affiliations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>hed__Role__c</fullName>
        <description>The role this person has with the organization.</description>
        <inlineHelpText>The role this person has with the organization.</inlineHelpText>
        <label>Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Student</fullName>
                </value>
                <value>
                    <fullName>Prospect</fullName>
                </value>
                <value>
                    <fullName>Applicant</fullName>
                </value>
                <value>
                    <fullName>Faculty</fullName>
                </value>
                <value>
                    <fullName>Employee</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>hed__Status__c</fullName>
        <description>Indicates whether this is a current or former Affiliation.</description>
        <inlineHelpText>Indicates whether this is a current or former Affiliation.</inlineHelpText>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Current</fullName>
                    <default>true</default>
                    <label>Current</label>
                </value>
                <value>
                    <fullName>Former</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>hed__Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The organization this person is affiliated with.</description>
        <inlineHelpText>The organization this person is affiliated with.</inlineHelpText>
        <label>Organization</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Affiliated Contacts</relationshipLabel>
        <relationshipName>Affl_Contacts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>hed__Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The person affiliated with this organization.</description>
        <inlineHelpText>The person affiliated with this organization.</inlineHelpText>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Affiliated Accounts</relationshipLabel>
        <relationshipName>Affl_Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>hed__EndDate__c</fullName>
        <description>The date this Affiliation ended or will end.</description>
        <inlineHelpText>The date this Affiliation ended or will end.</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>hed__Primary__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether this is the main Affiliation for this person. If selected, the organization name is stored in the relevant Primary Affiliation field on the Contact record.</description>
        <inlineHelpText>Indicates whether this is the main Affiliation for this person. If selected, the organization name is stored in the relevant Primary Affiliation field on the Contact record.</inlineHelpText>
        <label>Primary</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>hed__StartDate__c</fullName>
        <description>The date this person became affiliated with this organization.</description>
        <inlineHelpText>The date this person became affiliated with this organization.</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>hed__Description__c</fullName>
        <description>Details of how the person and organization are affiliated.</description>
        <inlineHelpText>Details of how the person and organization are affiliated.</inlineHelpText>
        <label>Description</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>hed__Affiliation_Type__c</fullName>
        <description>Record type of the affiliated Account, for example, Academic Department or Sports Organization (read-only).</description>
        <formula>hed__Account__r.RecordType.Name</formula>
        <inlineHelpText>Record type of the affiliated Account, for example, Academic Department or Sports Organization (read-only).</inlineHelpText>
        <label>Affiliation Type</label>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>hed__All</fullName>
        <columns>NAME</columns>
        <columns>hed__Contact__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>hed__Account__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>hed__Primary__c</columns>
        <columns>hed__Role__c</columns>
        <columns>hed__Status__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>